--- a/qr_code_scanner_reader/privacy_policy.html
+++ b/qr_code_scanner_reader/privacy_policy.html
@@ -285,7 +285,7 @@
             <strong>Developer Name</strong>: Bilal Ahmad<br />
             <strong>Email</strong>:
             <a href="mailto:bilalahmad72.official@gmail.com"
-              >bilalahmad72.official@gmail.com</a
+              >support@apposoft.com</a
             >
           </p>
         </div>
