--- a/urdu_9th_mcqs/privacy_policy.html
+++ b/urdu_9th_mcqs/privacy_policy.html
@@ -135,10 +135,7 @@
     <p>
       AdMob's use of information collected from our App is governed by Google's
       Privacy Policy. For more information on how Google uses collected
-      information, please visit:
-      <a href="https://policies.google.com/privacy" target="_blank"
-        >https://policies.google.com/privacy</a
-      >
+      information, please visit there website.
     </p>
 
     <h3>3.3 Ad Personalization:</h3>
@@ -225,9 +222,9 @@
       If you have any questions about this Privacy Policy, please contact us at:
     </p>
 
-    <p>[Your Contact Email]</p>
+    <p><a href="mailto:bilalferoze98@gmail.com">support@apposoft.com</a></p>
 
-    <p>[Your Developer Name]</p>
+    <p>Bilal Ahmad</p>
 
     <div class="footer">
       <p>
